[package]
name = "calcium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures-util = "0.3.21"
pretty_env_logger = "0.4.0"
tokio-stream = "0.1.9"
tungstenite = "0.17.3"
env_logger = "0.9.0"